fix: improvement Swagger Product part 1
